--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   src: url("./assets/Mona-Sans-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url("./assets/Mona-Sans-Bold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url("./assets/Mona-Sans-RegularItalic.woff2") format("woff2");
   font-weight: normal;
   font-style: italic, oblique;
+  font-display: swap;
 }
 
 :root {
