--- a/src/components/tags/Tags.css
+++ b/src/components/tags/Tags.css
@@ -3,6 +3,7 @@
   border-width: 1px;
   border-style: solid;
   border-radius: 4px;
+  cursor: help;
 }
 
 .tag_depth {
@@ -13,6 +14,11 @@
 .tag_path {
   color: #c8c093;
   background-color: #c8c09340;
+}
+
+.tag_keywords {
+  color: #7aa89f;
+  background-color: #7aa89f40;
 }
 
 .tag_deduped {
