--- a/src/components/package-card/PackageCardBody.css
+++ b/src/components/package-card/PackageCardBody.css
@@ -1,3 +1,10 @@
+.description {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  margin-block: 8px;
+}
+
 .licenses {
   display: flex;
   flex-direction: row;
