--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@ p {
   margin-block: 8px;
 }
 
+i {
+  font-family: "Mona Sans Italic";
+}
+
 ::-webkit-scrollbar {
   width: 4px;
   height: 4px;
